RESOLVED FIXED150414
WebProcess crashes when accessibility bundle is not found
https://bugs.webkit.org/show_bug.cgi?id=150414
Summary WebProcess crashes when accessibility bundle is not found
Enrica Casucci
Reported 2015-10-21 14:15:20 PDT
When trying to log the path and error the WebProcess crashes, due to the uninitialized NSError object.
Attachments
Patch (1.46 KB, patch)
2015-10-21 14:19 PDT, Enrica Casucci
mitz: review+
Enrica Casucci
Comment 1 2015-10-21 14:19:09 PDT
Enrica Casucci
Comment 2 2015-10-21 17:02:55 PDT
Committed revision 191414.
Note You need to log in before you can comment on or make changes to this bug.