WebProcess crashes when accessibility bundle is not found. https://bugs.webkit.org/show_bug.cgi?id=150414

Reviewed by Dan Bernstein.

The uninitialized pointer to NSError causes the print function to crash.

* WebProcess/cocoa/WebProcessCocoa.mm:
(WebKit::registerWithAccessibility):



Canonical link: https://commits.webkit.org/168577@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@191414 268f45cc-cd09-0410-ab3c-d52691b4dbfc